fixed spacing of nav items in desktop/ipad view

--- a/css/style.css
+++ b/css/style.css
@@ -53,15 +53,10 @@ h2 {
   flex-direction: column;
   margin-left: auto;
   margin-right: auto;
-  justify-content: space-between;
-}
+/*  justify-content: space-between;
+*/}
 
-.nav-container a:not(.navlogo) {
-  display:-webkit-flex;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-evenly;
-}
+
 .navlogo {
   background-color: white !important;
   font-size:36px;
@@ -326,6 +321,10 @@ a.skip:focus {
 
 /* Medium devices (landscape tablets, 768px and up) */
 @media only screen and (min-width: 768px) {
+  #spacer {
+    visibility: hidden;
+    flex-grow: 1;    
+  }
   .nav-container {
     position: fixed; /* Set the navbar to fixed position */
     top: 0; /* Position the navbar at the top of the page */
@@ -344,6 +343,10 @@ a.skip:focus {
 
 /* Large devices (laptops/desktops, 992px and up) */
 @media only screen and (min-width: 992px) {
+  #spacer {
+    visibility: hidden;
+    flex-grow: 1;    
+  }
   .nav-container {
     position: absolute;
     top: auto;
